# soundkit

./: .gitignore  AAC_LC_DEFAULT_TODO.md  BENCHMARK.md  Cargo.toml  Makefile  README.md  WASM_API.md
.github/workflows/: ci.yml
aac-wasm-bench/: Cargo.toml  README.md
aac-wasm-bench/src/: lib.rs  main.rs
golden/aac/: A_Tusk_is_used_to_make_costly_gifts_encoded.aac
golden/flac/: A_Tusk_is_used_to_make_costly_gifts_24bit.flac
js/: package-lock.json  package.json  ringbuffer.js
js/test/: ringbuffer_test.js
lori-asha-premix-bench/: Cargo.toml
lori-asha-premix-bench/src/: main.rs
scripts/: bump-version.sh
soundkit/: .gitignore  Cargo.toml  Makefile  README.md
soundkit-aac/: .gitignore  Cargo.toml  README.md
soundkit-aac-lc/: Cargo.toml  README.md
soundkit-aac-lc/examples/: probe_adts_fixture.rs
soundkit-aac-lc/src/: bitreader.rs  channel.rs  config.rs  decoder.rs  dsp.rs  error.rs  ics.rs  lib.rs  pulse.rs  scalefactor.rs  section.rs  sfb.rs  spectral.rs  stereo.rs  syntax.rs  tns.rs  vlc.rs
soundkit-aac-lc/tests/: no_alloc_decode.rs
soundkit-aac/src/: lib.rs
soundkit-ac3/: Cargo.toml
soundkit-ac3/src/: lib.rs
soundkit-aiff/: Cargo.toml
soundkit-aiff/src/: lib.rs
soundkit-alac/: Cargo.toml
soundkit-alac/src/: lib.rs
soundkit-amr/: Cargo.toml  build.rs
soundkit-amr/src/: lib.rs
soundkit-audio-demux/: Cargo.toml
soundkit-audio-demux/src/: lib.rs
soundkit-decoder/: AGENTS.md  Cargo.toml  M4A_DECODER_OPTIONS.md  README.md  bench_ffmpeg.sh
soundkit-decoder/src/: lib.rs
soundkit-decoder/testdata/aac/: A_Tusk_is_used_to_make_costly_gifts.aac  A_big_wet_stain_was_on_the_round_carpet.aac  A_big_wet_stain_was_on_the_round_carpet.m4a  A_blue_crane_is_a_tall_wading_bird.aac
soundkit-decoder/testdata/flac/: A_big_wet_stain_was_on_the_round_carpet.flac  A_blue_crane_is_a_tall_wading_bird.flac
soundkit-decoder/testdata/m4a/: A_blue_crane_is_a_tall_wading_bird.m4a
soundkit-decoder/testdata/opus/: A_Tusk_is_used_to_make_costly_gifts.opus  A_big_wet_stain_was_on_the_round_carpet.opus  A_blue_crane_is_a_tall_wading_bird.opus
soundkit-decoder/testdata/webm/: A_Tusk_is_used_to_make_costly_gifts.webm  A_big_wet_stain_was_on_the_round_carpet.webm  A_blue_crane_is_a_tall_wading_bird.webm
soundkit-flac/: Cargo.toml  README.md
soundkit-flac/examples/: flac_frame_cost.rs
soundkit-flac/src/: frame_codec.rs  lib.rs
soundkit-g711/: Cargo.toml
soundkit-g711/src/: lib.rs
soundkit-g722/: Cargo.toml
soundkit-g722/src/: lib.rs
soundkit-g726/: Cargo.toml
soundkit-g726/src/: lib.rs
soundkit-g729/: Cargo.toml
soundkit-g729/src/: lib.rs
soundkit-gsm/: Cargo.toml
soundkit-gsm/src/: lib.rs
soundkit-mp3/: Cargo.toml  README.md
soundkit-mp3/src/: lib.rs
soundkit-ogg-opus/: Cargo.toml  README.md
soundkit-ogg-opus/src/: lib.rs
soundkit-opus/: Cargo.toml  README.md
soundkit-opus/src/: lib.rs
soundkit-rubberband/: Cargo.toml
soundkit-rubberband-sys/: Cargo.toml  build.rs
soundkit-rubberband-sys/src/: lib.rs
soundkit-rubberband/src/: lib.rs
soundkit-speex/: Cargo.toml
soundkit-speex/src/: lib.rs
soundkit-vorbis/: Cargo.toml
soundkit-vorbis/src/: lib.rs
soundkit-wasm/: Cargo.toml
soundkit-wasm-decoder/: Cargo.toml
soundkit-wasm-decoder/pkg/: package.json  soundkit_wasm_decoder.d.ts  soundkit_wasm_decoder.js  soundkit_wasm_decoder_bg.wasm  soundkit_wasm_decoder_bg.wasm.d.ts
soundkit-wasm-decoder/src/: lib.rs
soundkit-wasm/pkg/: package.json  soundkit_wasm.d.ts  soundkit_wasm.js  soundkit_wasm_bg.wasm  soundkit_wasm_bg.wasm.d.ts
soundkit-wasm/src/: lib.rs
soundkit-wasm/tests/: aac_lc_bench_wasm.rs  aac_lc_wasm.rs
soundkit-webm/: Cargo.toml
soundkit-webm/outputs/: test.s16le
soundkit-webm/src/: lib.rs
soundkit-webm/testdata/: test.webm
soundkit/src/: audio_bytes.rs  audio_content_crypto.rs  audio_packet.rs  audio_pipeline.rs  audio_types.rs  crypto.rs  frame_stream.rs  lib.rs  raw_pcm.rs  test_utils.rs  wasm.rs  wav.rs
src/: audio_bytes.rs  audio_packet.rs  audio_pipeline.rs  audio_types.rs  graph.rs  lib.rs  main.rs  resample.rs  server.rs  spectrogram.rs  srt.rs  types.rs  wasm.rs  wav.rs
testdata/: s16le.wav.acc
testdata/ac3/: A_Tusk_is_used_to_make_costly_gifts.ac3
testdata/aifc/: A_Tusk_is_used_to_make_costly_gifts.aifc
testdata/aiff/: A_Tusk_is_used_to_make_costly_gifts.aiff
testdata/alac/: A_Tusk_is_used_to_make_costly_gifts.m4a
testdata/amr_nb/: A_Tusk_is_used_to_make_costly_gifts.amr
testdata/flac/: A_Tusk_is_used_to_make_costly_gifts.flac
testdata/g711_alaw/: A_Tusk_is_used_to_make_costly_gifts.alaw
testdata/g711_ulaw/: A_Tusk_is_used_to_make_costly_gifts.ulaw
testdata/g722/: A_Tusk_is_used_to_make_costly_gifts.g722
testdata/g726/: A_Tusk_is_used_to_make_costly_gifts.g726  A_Tusk_is_used_to_make_costly_gifts_16.g726  A_Tusk_is_used_to_make_costly_gifts_24.g726  A_Tusk_is_used_to_make_costly_gifts_40.g726
testdata/g729/: A_Tusk_is_used_to_make_costly_gifts.g729
testdata/gsm/: A_Tusk_is_used_to_make_costly_gifts.gsm
testdata/itag171/: yt_itag_171_vorbis.webm
testdata/linear16/: A_Tusk_is_used_to_make_costly_gifts.s16le
testdata/linear16_48/: A_Tusk_is_used_to_make_costly_gifts.s16le
testdata/linear16_8/: A_Tusk_is_used_to_make_costly_gifts.s16le
testdata/linear32/: A_Tusk_is_used_to_make_costly_gifts.s32le
testdata/linear32_48/: A_Tusk_is_used_to_make_costly_gifts.s32le
testdata/mac_aac/: A_Tusk_is_used_to_make_costly_gifts.m4a
testdata/speex/: A_Tusk_is_used_to_make_costly_gifts.spx
testdata/wav_32f/: A_Tusk_is_used_to_make_costly_gifts.wav.flac
testdata/wav_stereo/: A_Tusk_is_used_to_make_costly_gifts.wav.flac  A_Tusk_is_used_to_make_costly_gifts.wav.opus
