[package]
name = "soundkit"
version = "0.11.2"
edition = "2021"
license = "MIT"
description = "Audio format optimised for low-latency audio."
repository = "https://github.com/wavey-ai/soundkit"
readme = "README.md"

[dependencies]
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Worker"] }
wasm-bindgen = { version = "0.2", optional = true }
rubato = "0.14.1"
byteorder = "1.5.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["js-sys", "web-sys", "wasm-bindgen"]
