[workspace]
resolver = "2"
members = [
  "soundkit",
  "soundkit-aac",
  "soundkit-flac",
  "soundkit-g711",
  "soundkit-g722",
  "soundkit-g729",
  "soundkit-opus",
  "soundkit-mp3",
  "soundkit-ogg-opus",
  "soundkit-webm",
  "soundkit-decoder",
  "soundkit-rubberband-sys",
  "soundkit-rubberband",
]
