[workspace]
resolver = "2"
members = [
  "soundkit",
  "soundkit-aac",
  "soundkit-flac",
  "soundkit-g711",
  "soundkit-g722",
  "soundkit-g729",
  "soundkit-amr",
  "soundkit-g726",
  "soundkit-gsm",
  "soundkit-speex",
  "soundkit-vorbis",
  "soundkit-alac",
  "soundkit-aiff",
  "soundkit-ac3",
  "soundkit-opus",
  "soundkit-mp3",
  "soundkit-ogg-opus",
  "soundkit-webm",
  "soundkit-audio-demux",
  "soundkit-wasm-decoder",
  "soundkit-decoder",
  "soundkit-rubberband-sys",
  "soundkit-rubberband",
]
