[package]
name = "soundkit-ac3"
version = "0.12.3"
edition = "2021"
license = "MIT"
description = "Pure Rust raw AC-3 decoder wrapper for soundkit."
repository = "https://github.com/wavey-ai/soundkit"

[dependencies]
frame-header = { git = "https://github.com/wavey-ai/frame-header.git" }
oxideav-ac3 = "0.0.6"
oxideav-core = "0.1"
soundkit = { path = "../soundkit" }
