[package]
name = "soundkit-alac"
version = "0.12.3"
edition = "2021"
license = "MIT"
description = "Pure Rust ALAC decoder wrapper for soundkit."
repository = "https://github.com/wavey-ai/soundkit"

[dependencies]
alac = { version = "0.5.0", features = ["caf"] }
frame-header = { git = "https://github.com/wavey-ai/frame-header.git" }
soundkit = { path = "../soundkit" }
