[package]
name = "soundkit-decoder"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Streaming audio decoder pipeline with automatic format detection"
repository = "https://github.com/wavey-ai/soundkit"

[dependencies]
soundkit = { path = "../soundkit" }
access-unit = "0.1.2"
soundkit-amr = { path = "../soundkit-amr" }
soundkit-g711 = { path = "../soundkit-g711" }
soundkit-g722 = { path = "../soundkit-g722" }
soundkit-g726 = { path = "../soundkit-g726" }
soundkit-g729 = { path = "../soundkit-g729" }
soundkit-gsm = { path = "../soundkit-gsm" }
soundkit-speex = { path = "../soundkit-speex" }
soundkit-vorbis = { path = "../soundkit-vorbis" }
soundkit-alac = { path = "../soundkit-alac" }
soundkit-aiff = { path = "../soundkit-aiff" }
soundkit-ac3 = { path = "../soundkit-ac3" }
soundkit-mp3 = { path = "../soundkit-mp3", default-features = false }
soundkit-aac = { path = "../soundkit-aac", features = ["mp4-decoder"] }
soundkit-flac = { path = "../soundkit-flac", features = ["claxon-decoder"] }
soundkit-opus = { path = "../soundkit-opus" }
soundkit-ogg-opus = { path = "../soundkit-ogg-opus" }
soundkit-webm = { path = "../soundkit-webm" }
rtrb = "0.3"
frame-header = "0.2.0"
bytes = "1"
rubato = "0.14.1"
