[package]
name = "soundkit-flac"
version = "0.12.3"
edition = "2021"
license = "MIT"
description = "FLAC packet codec support for Soundkit"
repository = "https://github.com/wavey-ai/soundkit"

[dependencies]
access-unit = "0.1.2"
libc = "0.2.158"
libflac-sys = { version = "0.3.4", optional = true }
claxon = { version = "0.4", optional = true }
flacenc = { version = "=0.5.1", default-features = false, optional = true }
oxideav-core = { version = "0.1.26", optional = true }
oxideav-flac = { version = "0.0.11", optional = true }
soundkit = "0.12.3"
tracing = "0.1.40"

[features]
default = ["libflac", "oxideav-encoder"]
libflac = ["libflac-sys"]
claxon-decoder = ["claxon"]
oxideav-encoder = ["dep:oxideav-core", "dep:oxideav-flac"]
packet-codec = ["dep:flacenc", "dep:oxideav-core", "dep:oxideav-flac"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[example]]
name = "flac_frame_cost"
required-features = ["packet-codec"]
