[package]
name = "soundkit-mp3"
version = "0.1.0"
edition = "2021"

[dependencies]
mp3lame-encoder = "0.2.1"
mp3lame-sys = "0.1.9"
nanomp3 = { git = "https://github.com/wavey-ai/nanomp3.git" }
soundkit = { path = "../soundkit" }
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
