[package]
name = "soundkit-ogg-opus"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Streaming Ogg Opus decoder built on soundkit and ogg"
repository = "https://github.com/wavey-ai/soundkit"
readme = "README.md"

[dependencies]
frame-header = "0.2.0"
soundkit = { version = "0.12.2", path = "../soundkit" }
soundkit-opus = { version = "0.0.1", path = "../soundkit-opus" }
tracing = "0.1.40"
memchr = "2.7"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
crate-type = ["cdylib", "rlib"]
