[package]
name = "soundkit-ogg-opus"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Streaming Ogg Opus decoder built on soundkit and ogg"
repository = "https://github.com/wavey-ai/soundkit"
readme = "README.md"

[dependencies]
frame-header = { git = "https://github.com/wavey-ai/frame-header.git", optional = true }
soundkit = { version = "0.12.2", path = "../soundkit", optional = true }
soundkit-opus = { version = "0.0.1", path = "../soundkit-opus", optional = true }
tracing = "0.1.40"
memchr = "2.7"

[features]
default = ["decode"]
decode = ["dep:frame-header", "dep:soundkit", "dep:soundkit-opus"]

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
crate-type = ["cdylib", "rlib"]
