[package]
name = "soundkit-opus"
version = "0.12.3"
edition = "2021"
license = "MIT"
description = "Opus Encoder traits"
repository = "https://github.com/wavey-ai/soundkit"
readme = "README.md"

[dependencies]
# Pure-Rust Opus (no opus-sys / C). The source imports `libopus_rs`, which this
# crate provides; the previous `libopus` (opus-rs) git dep was the C-FFI build
# and its API had drifted, so the opus feature never compiled.
libopus-rs = { path = "../../libopus-rs" }
soundkit = { version = "0.12.3", path = "../soundkit" }
frame-header = { version = "0.2.1", path = "../../frame-header" }
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
[lib]
crate-type = ["cdylib", "rlib"]
