[package]
name = "soundkit-speex"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Pure Rust Ogg Speex decoder wrapper for soundkit."
repository = "https://github.com/wavey-ai/soundkit"

[dependencies]
frame-header = "0.2.0"
memchr = "2"
oxideav-core = "0.1"
oxideav-speex = "0.0.6"
soundkit = { path = "../soundkit" }
