[package]
name = "soundkit-speex"
version = "0.12.3"
edition = "2021"
license = "MIT"
description = "Pure Rust Ogg Speex decoder wrapper for soundkit."
repository = "https://github.com/wavey-ai/soundkit"

[dependencies]
frame-header = "0.2.0"
memchr = "2"
oxideav-core = "0.1"
oxideav-speex = { git = "https://github.com/OxideAV/oxideav-speex.git" }
soundkit = { path = "../soundkit" }
