[package]
name = "soundkit-vorbis"
version = "0.12.3"
edition = "2021"
license = "MIT"
description = "Streaming Ogg Vorbis decoder for soundkit using pure Rust Lewton."
repository = "https://github.com/wavey-ai/soundkit"

[dependencies]
frame-header = { git = "https://github.com/wavey-ai/frame-header.git" }
lewton = "0.10.2"
memchr = "2"
soundkit = { path = "../soundkit" }
