[package]
name = "soundkit-vorbis"
version = "0.12.3"
edition = "2021"
license = "MIT"
description = "Streaming Ogg Vorbis decoder for soundkit using pure Rust Lewton."
repository = "https://github.com/wavey-ai/soundkit"

[dependencies]
frame-header = "0.2.1"
lewton = "0.10.2"
memchr = "2"
soundkit = { path = "../soundkit" }
