[package]
name = "soundkit-wasm"
version = "0.12.3"
edition = "2021"
license = "MIT"
description = "Browser WASM streaming music decoder facade for SoundKit codecs."
repository = "https://github.com/wavey-ai/soundkit"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = [
  "detect",
  "raw-pcm",
  "wav",
  "mp3",
  "vorbis",
  "aiff",
  "alac",
  "flac",
  "webm",
  "opus",
  "opus-debox",
  "aac-debox",
  "aac-lc",
  "audio-demux",
]
detect = ["dep:access-unit"]
audio-demux = ["dep:soundkit-audio-demux"]
raw-pcm = []
wav = []
mp3 = ["dep:soundkit-mp3"]
vorbis = ["dep:soundkit-vorbis"]
flac = [
  "dep:soundkit-flac",
  "soundkit-flac/claxon-decoder",
  "soundkit-flac/oxideav-encoder",
]
aac = ["dep:soundkit-aac", "soundkit-aac/fdk"]
m4a = ["aac", "soundkit-aac/mp4-decoder"]
aac-debox = ["dep:soundkit-aac", "soundkit-aac/mp4-demux"]
aac-lc = ["dep:soundkit-aac-lc"]
aac-lc-bench = ["aac-lc"]
alac = ["dep:soundkit-alac"]
aiff = ["dep:soundkit-aiff"]
opus = ["dep:soundkit-opus"]
ogg-opus = ["opus", "dep:soundkit-ogg-opus", "soundkit-ogg-opus/decode"]
opus-debox = ["dep:soundkit-ogg-opus", "dep:soundkit-webm"]
webm = ["dep:soundkit-webm", "soundkit-webm/vorbis"]
webm-opus = ["webm", "soundkit-webm/opus"]

[dependencies]
soundkit = { path = "../soundkit" }
access-unit = { git = "https://github.com/wavey-ai/access-unit.git", optional = true }
frame-header = "0.2.0"
js-sys = "0.3"
wasm-bindgen = "0.2"

soundkit-audio-demux = { path = "../soundkit-audio-demux", optional = true }
soundkit-aac = { path = "../soundkit-aac", default-features = false, optional = true }
soundkit-aac-lc = { path = "../soundkit-aac-lc", optional = true }
soundkit-aiff = { path = "../soundkit-aiff", optional = true }
soundkit-alac = { path = "../soundkit-alac", optional = true }
soundkit-flac = { path = "../soundkit-flac", default-features = false, optional = true }
soundkit-mp3 = { path = "../soundkit-mp3", default-features = false, optional = true }
soundkit-ogg-opus = { path = "../soundkit-ogg-opus", default-features = false, optional = true }
soundkit-opus = { path = "../soundkit-opus", optional = true }
soundkit-vorbis = { path = "../soundkit-vorbis", optional = true }
soundkit-webm = { path = "../soundkit-webm", default-features = false, optional = true }

[dev-dependencies]
aac-wasm-bench = { path = "../aac-wasm-bench", default-features = false, features = [
  "soundkit-lc",
] }
wasm-bindgen-test = "0.3"
