[package]
name = "soundkit-webm"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Streaming WebM audio decoder built on soundkit"
repository = "https://github.com/wavey-ai/soundkit"

[dependencies]
frame-header = "0.2.0"
soundkit = { version = "0.12.2", path = "../soundkit" }
soundkit-opus = { version = "0.0.1", path = "../soundkit-opus" }
soundkit-vorbis = { version = "0.1.0", path = "../soundkit-vorbis" }
tracing = "0.1.40"

[lib]
crate-type = ["cdylib", "rlib"]
