[package]
name = "soundkit-webm"
version = "0.12.3"
edition = "2021"
license = "MIT"
description = "Streaming WebM audio decoder built on soundkit"
repository = "https://github.com/wavey-ai/soundkit"

[dependencies]
frame-header = { git = "https://github.com/wavey-ai/frame-header.git" }
soundkit = { version = "0.12.3", path = "../soundkit" }
soundkit-opus = { version = "0.12.3", path = "../soundkit-opus", optional = true }
soundkit-vorbis = { version = "0.12.3", path = "../soundkit-vorbis", optional = true }
tracing = "0.1.40"

[features]
default = ["opus", "vorbis"]
opus = ["dep:soundkit-opus"]
vorbis = ["dep:soundkit-vorbis"]

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false
