[package]
name = "soundkit"
version = "0.12.1"
edition = "2021"
license = "MIT"
description = "Audio format optimised for low-latency audio."
repository = "https://github.com/wavey-ai/soundkit"
readme = "README.md"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true, features = ["Worker"] }
wasm-bindgen = { version = "0.2", optional = true }
rubato = "0.14.1"
byteorder = "1.5.0"
bytes = "1.7.2"
frame-header = { git = "https://github.com/wavey-ai/frame-header.git" }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
wasm = ["js-sys", "web-sys", "wasm-bindgen"]
